# vpn-v2

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agent/: Dockerfile  auth.py  main.py  utils.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  deps.py  keys.py  servers.py  traffic.py  websocket.py
backend/app/core/: repository.py  service.py
backend/app/keys/: dependencies.py  repository.py  router.py  service.py
backend/app/models/: __init__.py  access_key.py  server.py  traffic_log.py  user.py
backend/app/schemas/: access_key.py  instance.py  server.py  traffic.py  user.py
backend/app/servers/: dependencies.py  repository.py  service.py
backend/app/services/: health_checker.py  server_backend.py  shadowsocks.py  speed_tracker.py  traffic_monitor.py
backend/app/utils/: crypto.py  ss.py
backend/migration/: env.py
backend/migration/versions/: 28600d1d50c4_unique_port_per_server.py  a1b2c3d4e5f6_add_agent_fields_to_servers.py  bf0a31f81f0d_initial.py  c1d2e3f4a5b6_add_started_at_to_access_keys.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/components/: KeyCard.vue  KeysList.vue  ProfileCard.vue  ServerSelect.vue  ServersAdmin.vue  SpeedMonitor.vue  TrafficStats.vue  (+1 more)
monitoring/: agent-compose.yml  agent.env.example
monitoring/loki/: loki.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: agent-config.yml  main-config.yml
(+8 files in other folders)
